--- a/index.html
+++ b/index.html
@@ -1,40 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/styles.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+    <title>Frontend Mentor | FAQ Accordion Card</title>
+  </head>
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
+  <body>
+    <section class="outer-container">
+      <div class="img">
+        <img
+          src="./images/illustration-woman-online-mobile.svg"
+          alt="Header Image Top"
+          class="img__top"
+        />
+        <img
+          src="./images/bg-pattern-mobile.svg"
+          alt="Header Image Bottom"
+          class="img__bottom"
+        />
+      </div>
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+      <div class="inner-container">
+        <h1>FAQ</h1>
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
+        <div class="faq-container">
+          <div class="faq">
+            <div class="faq__question">
+              <p>How many team members can I invite?</p>
+              <img
+                src="./images/icon-arrow-down.svg"
+                alt="arrow"
+                class="arrow"
+              />
+            </div>
+            <div class="faq__answer">
+              <p>
+                You can invite up to 2 additional users on the Free plan. There
+                is no limit on team members for the Premium plan.
+              </p>
+            </div>
+          </div>
+          <div class="faq">
+            <div class="faq__question">
+              <p>What is the maximum file upload size?</p>
+              <img
+                src="./images/icon-arrow-down.svg"
+                alt="arrow"
+                class="arrow"
+              />
+            </div>
+            <div class="faq__answer">
+              <p>
+                No more than 2GB. All files in your account must fit your
+                allotted storage space.
+              </p>
+            </div>
+          </div>
+          <div class="faq">
+            <div class="faq__question">
+              <p>How do I reset my password?</p>
+              <img
+                src="./images/icon-arrow-down.svg"
+                alt="arrow"
+                class="arrow"
+              />
+            </div>
+            <div class="faq__answer">
+              <p>
+                Click “Forgot password” from the login page or “Change password”
+                from your profile page. A reset link will be emailed to you.
+              </p>
+            </div>
+          </div>
+          <div class="faq">
+            <div class="faq__question">
+              <p>Can I cancel my subscription?</p>
+              <img
+                src="./images/icon-arrow-down.svg"
+                alt="arrow"
+                class="arrow"
+              />
+            </div>
+            <div class="faq__answer">
+              <p>
+                Yes! Send us a message and we’ll process your request no
+                questions asked.
+              </p>
+            </div>
+          </div>
+          <div class="faq">
+            <div class="faq__question">
+              <p>Do you provide additional support?</p>
+              <img
+                src="./images/icon-arrow-down.svg"
+                alt="arrow"
+                class="arrow"
+              />
+            </div>
+            <div class="faq__answer">
+              <p>
+                Chat and email support is available 24/7. Phone lines are open
+                during normal business hours.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="https://www.frontendmentor.io/profile/jcombs0929" target="_blank"
+        >jcombs0929</a
+      >.
+    </div>
+  </body>
 </html>
