--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/styles.css" />
+    <script src="./js/index.js"></script>
 
     <title>Frontend Mentor | FAQ Accordion Card</title>
   </head>
@@ -41,7 +42,7 @@
         <h1>FAQ</h1>
 
         <div class="faq-container">
-          <div class="faq">
+          <div class="faq" onclick="toggleFAQ(0)">
             <div class="faq__question">
               <p>How many team members can I invite?</p>
               <img
@@ -57,7 +58,7 @@
               </p>
             </div>
           </div>
-          <div class="faq">
+          <div class="faq" onclick="toggleFAQ(1)">
             <div class="faq__question">
               <p>What is the maximum file upload size?</p>
               <img
@@ -73,7 +74,7 @@
               </p>
             </div>
           </div>
-          <div class="faq">
+          <div class="faq" onclick="toggleFAQ(2)">
             <div class="faq__question">
               <p>How do I reset my password?</p>
               <img
@@ -89,7 +90,7 @@
               </p>
             </div>
           </div>
-          <div class="faq">
+          <div class="faq" onclick="toggleFAQ(3)">
             <div class="faq__question">
               <p>Can I cancel my subscription?</p>
               <img
@@ -105,7 +106,7 @@
               </p>
             </div>
           </div>
-          <div class="faq">
+          <div class="faq" onclick="toggleFAQ(4)">
             <div class="faq__question">
               <p>Do you provide additional support?</p>
               <img
