--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
     <main class="container">
-      <section class="img__container">
+      <div class="img__container">
         <div class="img__mobile">
           <img
             src="./images/illustration-woman-online-mobile.svg"
@@ -43,24 +43,27 @@
           <img
             src="./images/illustration-box-desktop.svg"
             alt="Box"
+            aria-hidden="true"
             class="img__desktop--box"
           />
           <div class="img__desktop--inner">
             <img
               src="./images/illustration-woman-online-desktop.svg"
               alt="Header Image"
+              aria-hidden="true"
               class="img__desktop--inner-top"
             />
             <img
               src="./images/bg-pattern-desktop.svg"
               alt="Background Pattern"
+              aria-hidden="true"
               class="img__desktop--inner-bottom"
             />
           </div>
         </div>
-      </section>
+      </div>
 
-      <section class="faq__container">
+      <div class="faq__container">
         <h1>FAQ</h1>
 
         <div class="faq-inner-container">
@@ -145,10 +148,10 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
     </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
@@ -156,6 +159,6 @@
       <a href="https://www.frontendmentor.io/profile/jcombs0929" target="_blank"
         >jcombs0929</a
       >.
-    </div>
+    </footer>
   </body>
 </html>
